# http-redirect-service

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml  start.sh
.github/workflows/: lint.yml  test.yml
configs/: example.json
http_redirect_service/: app.py  cli.py  dependencies.py  exceptions.py  logging_config.py  models.py  routes.py  settings.py
tests/: conftest.py  patch_env.py  test_api.py
